# Rendering-Engines

./: .gitignore
RawEngine_v1/: main.cpp  (+1 more)
RawEngine_v2/: CMakeLists.txt  imgui.ini  main.cpp
RawEngine_v2/Assets/Scenes/: Scene 1.json  Scene 2.json  Scene 3.json
RawEngine_v2/Assets/shaders/: lit.frag  solid.frag  texture.frag  vertex.vert
RawEngine_v2/Assets/shaders/PostProcessing/: Hue shift.frag  bloom_combine.frag  bloom_threshold.frag  blur_horizontal.frag  blur_vertical.frag  invert.frag  test.frag  viewspace.vert
RawEngine_v2/core/: Asset.cpp  Asset.h  AssetLibrary.cpp  AssetLibrary.h  Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  GameObject.cpp  GameObject.h  Material.cpp  Material.h  MeshRenderer.cpp  MeshRenderer.h  PlayerController.cpp  PlayerController.h  PostProcessing.cpp  PostProcessing.h  RenderSettings.cpp  RenderSettings.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  assimpLoader.cpp  assimpLoader.h  mesh.cpp  mesh.h  model.cpp  model.h
RawEngine_v2/core/Assets/: Material.cpp  Material.h  RenderSettings.cpp  RenderSettings.h  Scene.cpp  Scene.h  mesh.cpp  mesh.h  model.cpp  model.h  texture.cpp  texture.h
RawEngine_v2/core/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  Light.cpp  Light.h  MeshRenderer.cpp  MeshRenderer.h  PlayerController.cpp  PlayerController.h  Transform.cpp  Transform.h
RawEngine_v2/editor/: Editor.cpp  Editor.h
RawEngine_v2/editor/EditorWindows/: EditorWindow.cpp  EditorWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  Inspector.cpp  Inspector.h  SceneLoader.cpp  SceneLoader.h  TestWindow.cpp  TestWindow.h  TransformWindow.cpp  TransformWindow.h  ViewPort.cpp  ViewPort.h
RawEngine_v2/editor/UIElements/: HierarchyNode.cpp  HierarchyNode.h
RawEngine_v2/editor/Utils/: SceneManager.cpp  SceneManager.h
RawEngine_v2/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h
RawEngine_v2/imgui/backends/: imgui_impl_allegro5.cpp  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_vulkan.cpp  imgui_impl_wgpu.cpp
RawEngine_v2/imgui/examples/example_allegro5/: main.cpp
RawEngine_v2/imgui/examples/example_android_opengl3/: main.cpp
RawEngine_v2/imgui/examples/example_apple_metal/: main.mm
RawEngine_v2/imgui/examples/example_apple_opengl2/: main.mm
RawEngine_v2/imgui/examples/example_glfw_metal/: main.mm
RawEngine_v2/imgui/examples/example_glfw_opengl2/: main.cpp
RawEngine_v2/imgui/examples/example_glfw_opengl3/: main.cpp
RawEngine_v2/imgui/examples/example_glfw_vulkan/: main.cpp
RawEngine_v2/imgui/examples/example_glfw_wgpu/: main.cpp
RawEngine_v2/imgui/examples/example_glut_opengl2/: main.cpp
RawEngine_v2/imgui/examples/example_sdl2_directx11/: main.cpp
RawEngine_v2/imgui/examples/example_sdl2_metal/: main.mm
RawEngine_v2/imgui/examples/example_sdl2_opengl2/: main.cpp
RawEngine_v2/imgui/examples/example_sdl2_opengl3/: main.cpp
RawEngine_v2/imgui/examples/example_sdl2_sdlrenderer2/: main.cpp
RawEngine_v2/imgui/examples/example_sdl2_vulkan/: main.cpp
RawEngine_v2/imgui/examples/example_sdl3_opengl3/: main.cpp
RawEngine_v2/imgui/examples/example_sdl3_sdlgpu3/: main.cpp
RawEngine_v2/imgui/examples/example_sdl3_sdlrenderer3/: main.cpp
RawEngine_v2/imgui/examples/example_sdl3_vulkan/: main.cpp
RawEngine_v2/imgui/examples/example_win32_directx10/: main.cpp
RawEngine_v2/imgui/examples/example_win32_directx11/: main.cpp
RawEngine_v2/imgui/examples/example_win32_directx12/: main.cpp
RawEngine_v2/imgui/examples/example_win32_directx9/: main.cpp
RawEngine_v2/imgui/examples/example_win32_opengl3/: main.cpp
RawEngine_v2/imgui/examples/example_win32_vulkan/: main.cpp
RawEngine_v2/imgui/misc/fonts/: binary_to_compressed_c.cpp
RawEngine_v2/imgui/misc/freetype/: imgui_freetype.cpp
(+9 files in other folders)
